# airline-revenue-management-lab

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
configs/: default.toml  models.toml
kaggle_kernel/: airline_fare_sota.py  kernel-metadata.json
notebooks/: 00_dataset_preview.ipynb  01_eda.ipynb  02_model_results.ipynb
src/airline_rm/: __init__.py  cli.py  dashboard.py
src/airline_rm/config/: settings.py
src/airline_rm/data/: chunking.py  clean.py  download.py  inspect.py  parquet_builder.py  schema.py
src/airline_rm/explainability/: __init__.py  feature_importance.py  shap_analysis.py
src/airline_rm/features/: build_features.py  categoricals.py  sequence_builder.py  time_features.py
src/airline_rm/utils/: __init__.py  logging.py  memory.py  parallel.py  paths.py
src/airline_rm/visualization/: __init__.py  eda_plots.py  tableau_exports.py
tests/: conftest.py  test_chunking.py  test_cleaning.py  test_config.py  test_features.py  test_metrics.py  test_models_smoke.py
