[tool.poetry]
name = "airline-revenue-management-lab"
version = "0.1.0"
description = "Production-quality ML pipeline for airline market fare prediction and revenue management simulation."
authors = ["Antonio <antonio.spedito01@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "airline_rm", from = "src"}]

[tool.poetry.scripts]
airline-rm = "airline_rm.cli:app"

[tool.poetry.dependencies]
python = "^3.12"
# --- Data ---
polars = ">=1.0.0"
pandas = ">=2.2.0"
pyarrow = ">=17.0.0"
numpy = ">=1.26.0"
# --- ML ---
scikit-learn = ">=1.5.0"
xgboost = ">=2.1.0"
lightgbm = ">=4.4.0"
catboost = ">=1.2.7"
# --- Deep Learning ---
torch = ">=2.3.0"
# --- CLI & Config ---
typer = {extras = ["all"], version = ">=0.12.0"}
pydantic = ">=2.8.0"
pydantic-settings = ">=2.4.0"
tomli = ">=2.0.0"
python-dotenv = ">=1.0.0"
# --- Logging & Progress ---
loguru = ">=0.7.0"
tqdm = ">=4.66.0"
# --- Visualization ---
matplotlib = ">=3.9.0"
seaborn = ">=0.13.0"
# --- Utilities ---
psutil = ">=6.0.0"
joblib = ">=1.4.0"
# --- Dataset download ---
kagglehub = ">=0.3.0"
# --- Explainability ---
shap = ">=0.46.0"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.5.0"
mypy = ">=1.11.0"
pytest = ">=8.3.0"
pytest-cov = ">=5.0.0"
pre-commit = ">=3.8.0"
ipykernel = ">=6.29.0"
nbformat = ">=5.10.0"

[tool.poetry.group.dashboard.dependencies]
streamlit = ">=1.37.0"
plotly = ">=5.23.0"

[tool.poetry.group.optional.dependencies]
duckdb = ">=1.0.0"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

# --- Ruff ---
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["airline_rm"]

# --- Mypy ---
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true

# --- Pytest ---
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests requiring data files",
]
